Prepare for demo: more functionality.
